--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "dependencies": {
-    "extract-text-webpack-plugin": "^0.8.2"
+    "extract-text-webpack-plugin": "^0.8.2",
+    "vuex": "^0.6.2"
   },
   "devDependencies": {
     "babel-core": "^6.3.17",
@@ -48,6 +49,6 @@
     "cp": "cp -r index.html d:/VMShare/mainsite_vue/templates/wap",
     "ip": "webpack-dev-server  --progress --colors --hot --host=0.0.0.0  --port 9000"
   },
-  "author": "whitney",
+  "author": "henry yan",
   "license": "ISC"
 }
