--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "style-loader": "^0.13.0",
     "swiper": "^3.2.0",
     "url-loader": "^0.5.6",
-    "vue": "^1.0.20",
+    "vue": "^1.0.11",
     "vue-hot-reload-api": "^1.2.2",
     "vue-html-loader": "^1.1.0",
     "vue-loader": "^8.2.0",
@@ -38,7 +38,9 @@
     "vue-style-loader": "^1.0.0",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0",
-    "webpack-zepto": "0.0.1"
+    "webpack-zepto": "0.0.1",
+    "webpack-dev-middleware": "^1.4.0",
+    "bootstrap": "^3.3.6"
   },
   "scripts": {
     "mb": "export PRODUCTION=1 && webpack --progress --hide-modules",
