--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "webpack-dev-server": "^1.14.0",
     "webpack-zepto": "0.0.1",
     "webpack-dev-middleware": "^1.4.0",
-    "bootstrap": "^3.3.6"
+    "bootstrap": "^3.3.6",
+    "reqwest": "^2.0.5"
   },
   "scripts": {
     "mb": "export PRODUCTION=1 && webpack --progress --hide-modules",
